--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -64,7 +64,7 @@
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
 %\title{Bare Demo of IEEEtran.cls\\ for IEEE Conferences}
-\title{Practical Stochastic Optimization for PCA and PLS: Variance Reduction and Asynchronism}
+\title{Advanced Stochastic Optimization for PCA and PLS: Variance Reduction and Asynchronism}
 
 % author names and affiliations
 % use a multiple column layout for up to three different
