--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,24 @@
+@article{Schmidt2013Minimizing,
+  title={Minimizing finite sums with the stochastic average gradient},
+  author={Schmidt, Mark and Roux, Nicholas Le and Bach, Francis},
+  journal={Mathematical Programming},
+  volume={26},
+  number={5},
+  pages={1-30},
+  year={2013},
+}
+
+@article{Feng2011HOGWILD,
+  title={HOGWILD!: A Lock-Free Approach to Parallelizing Stochastic Gradient Descent},
+  author={Feng, Niu and Recht, Benjamin and Re, Christopher and Wright, Stephen J.},
+  journal={Advances in Neural Information Processing Systems},
+  volume={24},
+  pages={693-701},
+  year={2011},
+}
+
+
+
 @article{Arora2016Stochastic,
   title={Stochastic Optimization for Multiview Representation Learning using Partial Least Squares},
   author={Arora, Raman and Mianjy, Poorya and Marinov, Teodor},
@@ -154,11 +175,4 @@
  abstract={Partial least squares  (PLS), also known as projection to latent structures , is a dimensionality reduction technique for maximizing the covariance between the predictor (independent) matrix X  and the predicted (dependent) matrix Y  for each component of the reduced space [98, 350]. A popular application of PLS is to select the matrix Y  to contain only product quality data which can even include off-line measurement data, and the matrix X  to contain all other process variables [207]. Such inferential models (also known as soft sensors) can be used for the on-line prediction of the product quality data [215, 222, 223], for incorporation into process control algorithms [158, 259, 260], as well as for process monitoring [207, 259, 260]. Discriminant PLS selects the matrix X  to contain all process variables and selects the Y  matrix to focus PLS on the task of fault diagnosis [46].},
 }
 
-@article{Feng2011HOGWILD,
-  title={HOGWILD!: A Lock-Free Approach to Parallelizing Stochastic Gradient Descent},
-  author={Feng, Niu and Recht, Benjamin and Re, Christopher and Wright, Stephen J.},
-  journal={Advances in Neural Information Processing Systems},
-  volume={24},
-  pages={693-701},
-  year={2011},
-}
+
